<resources>
    <string name="app_name">BILader</string>
    <string name="full_name">full name</string>
    <string name="mail">e-mail</string>
    <string name="mail_register">e-mail</string>
    <string name="password_again">password (again)</string>
    <string name="password">password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up">sign up</string>
    <string name="log_in">log in</string>
    <string name="verification_code_title">Verification Code</string>
    <string name="verification_code_entry_request">Please type the verification code sent.</string>
    <string name="verification_submit_button">submit</string>
    <string name="verification_dont_receive_question">Do not receive the code?</string>
    <string name="verification_resend_request"><u>Resend</u></string>
    <string name="background_sketches">background sketches</string>
    <string name="avatar_choice_declared">choose your avatar</string>
    <string name="reset_password_entry_request">Enter the 6 digits code that you received on your mail</string>
    <string name="reset_password_code_title">Enter 6 Digits Code</string>
    <string name="reset_password_button_text">reset password</string>
    <string name="forgot_password_title">Forgot Password?</string>
    <string name="forgot_password_mail_entry_request">Enter the mail address associated with your account</string>
    <string name="forgot_password_send_button_text">send</string>
    <string name="forgot_password_already_received_text">I have already received my code.</string>
    <string name="biltrader">Biltrader</string>
    <string name="report_type_complains">Please type your complains...</string>
    <string name="report_title">Keep us informed</string>
    <string name="main_chat_overview">the last message is ....</string>
    <string name="main_chat_time">1m. ago</string>
    <string name="channel_name">bilader_notification_channel</string>
    <string name="channel_description">desc_bilader_notif_channel</string>

</resources>