<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="393dp"
        android:layout_height="196dp"
        android:layout_marginBottom="4dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/text_verification_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/verification_background_new" />


    <TextView
        android:id="@+id/text_forgot_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="224dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/forgot_password_title"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_forgot_password_entry_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:alpha="0.78"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/forgot_password_mail_entry_request"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_forgot_password_title" />

    <EditText
        android:id="@+id/editText_forgot_password_mail"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/mail_button"
        android:ems="10"
        android:fontFamily="@font/roboto_bold"
        android:hint="@string/mail"
        android:inputType="textEmailAddress"
        android:paddingVertical="9dp"
        android:paddingStart="35dp"
        android:paddingLeft="35dp"
        android:paddingEnd="5dp"
        android:paddingRight="5dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_forgot_password_entry_request"
        android:autofillHints=""
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/button_forgot_password_button"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:background="@drawable/sign_up_register"
        android:fontFamily="@font/roboto_bold"
        android:hint="@string/forgot_password_send_button_text"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_forgot_password_mail" />


    <TextView
        android:id="@+id/text_already_received"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.78"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/forgot_password_already_received_text"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_forgot_password_button"
        app:layout_constraintVertical_bias="0.043" />

</androidx.constraintlayout.widget.ConstraintLayout>