<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_verification_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="192dp"
        android:text="@string/verification_code_title"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center_horizontal"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_verification_code_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/verification_code_entry_request"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center_horizontal"
        android:alpha="0.78"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_verification_code" />

    <com.raycoarana.codeinputview.CodeInputView
        android:id="@+id/codeInputView"
        android:layout_width="208dp"
        android:layout_height="61dp"
        android:layout_marginTop="16dp"
        app:animate_on_complete="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_verification_code_request"
        app:length_of_code="6"
        app:underline_color="#457ad1" />


    <Button
        android:id="@+id/button_verification_submit"
        android:layout_width="199dp"
        android:layout_height="39dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/verification_submit_button"
        android:hint="@string/verification_submit_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000"
        android:textColorHighlight="#000000"
        android:textColorLink="#000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/codeInputView" />

    <Button
        android:id="@+id/button_verification_code_resend"
        android:layout_width="93dp"
        android:layout_height="23dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="84dp"
        android:layout_marginRight="84dp"
        android:ems="10"
        android:fontFamily="@font/roboto_bold"
        android:foregroundGravity="left"
        android:gravity="center_horizontal"
        android:hint="@string/verification_resend_request"
        android:inputType="textPersonName"
        android:padding="3dp"
        android:textColorHint="@color/bilader_blue"
        android:background="@android:color/transparent"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_verification_submit"
        tools:ignore="TextViewEdits" />

    <TextView
        android:id="@+id/text_verification_receive_question"
        android:layout_width="157dp"
        android:layout_height="23dp"
        android:layout_marginStart="104dp"
        android:layout_marginLeft="104dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_bold"
        android:padding="3dp"
        android:text="@string/verification_dont_receive_question"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_verification_submit" />



</androidx.constraintlayout.widget.ConstraintLayout>