<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/image_reset_password_vector"
        android:layout_width="80dp"
        android:layout_height="78dp"
        android:layout_marginTop="108dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/enhanced_encryption_24"
        android:contentDescription="vector"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/text_reset_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/reset_password_code_title"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_reset_password_vector" />

    <TextView
        android:id="@+id/text_reset_password_input_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/reset_password_entry_request"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center_horizontal"
        android:alpha="0.78"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_reset_password_title" />

    <com.raycoarana.codeinputview.CodeInputView
        android:id="@+id/code_reset_password_pin_code"
        android:layout_width="208dp"
        android:layout_height="61dp"
        app:input_type="numeric"
        app:underline_color="#457ad1"
        app:length_of_code="4"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_reset_password_input_request" />

    <EditText
        android:id="@+id/editText_reset_password_password"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:background="@drawable/password_button"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:paddingVertical="9dp"
        android:paddingStart="35dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:fontFamily="@font/roboto_bold"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/code_reset_password_pin_code"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editText_reset_password_password_again"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:background="@drawable/password_button"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:paddingVertical="9dp"
        android:paddingStart="35dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:inputType="textPassword"
        android:hint="@string/password_again"
        android:fontFamily="@font/roboto_bold"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_reset_password_password"
        android:autofillHints="" />

    <Button
        android:id="@+id/button"
        android:background="@drawable/sign_up_register"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginTop="40dp"
        android:hint="@string/reset_password_button_text"
        android:fontFamily="@font/roboto_bold"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_reset_password_password_again" />

</androidx.constraintlayout.widget.ConstraintLayout>