<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/radius"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff"
    tools:layout_editor_absoluteY="25dp">



    <!--FIGURE ON THE TOP RIGHT CORNER -->

    <!--FIGURE ON THE TOP LEFT CORNER -->

    <!--TEXT OF THE LOGO-->

    <ImageView
        android:id="@+id/left_corner_sketch"
        android:layout_width="386dp"
        android:layout_height="333dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="472dp"
        android:contentDescription="@string/background_sketches"
        android:src="@drawable/top_left_sketch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/right_corner_sketch"
        android:layout_width="208dp"
        android:layout_height="411dp"
        android:layout_marginStart="216dp"
        android:layout_marginLeft="216dp"
        android:layout_marginBottom="392dp"
        android:contentDescription="@string/background_sketches"
        android:src="@drawable/top_right_sketch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="104dp"
        android:layout_height="90dp"
        android:layout_marginTop="92dp"
        android:contentDescription="@string/background_sketches"
        android:src="@drawable/vector_logo"
        app:layout_constraintBottom_toTopOf="@+id/textAppName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--TEXT OF THE APP NAME-->
    <TextView
        android:id="@+id/textAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:alpha="0.58"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_logo" />

    <!--TEXT OF THE E-MAIL-->
    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:background="@drawable/mail_button"
        android:fontFamily="@font/roboto_bold"
        android:gravity="start"
        android:inputType="textEmailAddress"
        android:hint="@string/mail"
        android:paddingLeft="35dp"
        android:paddingRight="5dp"
        android:paddingVertical="9dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAppName"
        android:paddingStart="35dp"
        android:paddingEnd="5dp"
        android:autofillHints="" />

    <!--TEXT OF THE PASSWORD-->
    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/password_button"
        android:fontFamily="@font/roboto_bold"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="35dp"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:paddingVertical="9dp"
        android:textAlignment="viewStart"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
        android:layout_gravity="start"
        android:autofillHints="" />

    <!--TEXT OF THE FORGOT PASSWORD-->
    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="1"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/forgot_password"
        android:textColor="#000000"
        android:textSize="13sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.754"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <!--BUTTON OF THE LOG-IN-->
    <Button
        android:id="@+id/buttonLogIn"
        android:layout_width="140dp"
        android:layout_height="30dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/log_in_button"
        android:fontFamily="@font/roboto_bold"
        android:hint="@string/log_in"
        android:padding="8dp"
        android:textAlignment="center"
        android:textColorHint="@color/black"
        android:textIsSelectable="true"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        android:gravity="center_horizontal" />

    <!--BUTTON OF THE SIGN-UP-->
    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="140dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/sign_up_button"
        android:fontFamily="@font/roboto_bold"
        android:hint="@string/sign_up"
        android:textAlignment="center"
        android:padding="5dp"
        android:textColor="@color/black"
        android:textColorHighlight="#009688"
        android:textColorHint="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogIn"
        app:layout_constraintVertical_bias="0.006"
        android:gravity="center_horizontal" />

</androidx.constraintlayout.widget.ConstraintLayout>