<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_app_logo_register"
        android:layout_width="104dp"
        android:layout_height="90dp"
        android:layout_marginTop="92dp"
        android:foregroundGravity="center"
        android:src="@drawable/vector_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VectorDrawableCompat" />

    <ImageView
        android:id="@+id/image_avatar_no_gender"
        android:layout_width="74dp"
        android:layout_height="82dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:foregroundGravity="center"
        android:src="@drawable/avatar_no_gender"
        app:layout_constraintEnd_toStartOf="@+id/image_avatar_female"
        app:layout_constraintHorizontal_bias="0.813"
        app:layout_constraintStart_toEndOf="@+id/image_avatar_male"
        app:layout_constraintTop_toBottomOf="@+id/text_options_declared" />

    <ImageView
        android:id="@+id/image_avatar_male"
        android:layout_width="74dp"
        android:layout_height="82dp"
        android:layout_marginTop="16dp"
        android:foregroundGravity="center"
        android:src="@drawable/avatar_male"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_options_declared" />

    <ImageView
        android:id="@+id/image_avatar_female"
        android:layout_width="74dp"
        android:layout_height="82dp"
        android:layout_marginTop="16dp"
        android:foregroundGravity="center"
        android:src="@drawable/avatar_female"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.89"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_options_declared" />

    <TextView
        android:id="@+id/text_options_declared"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/avatar_choice_declared"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_password_again_register" />

    <Button
        android:id="@+id/button_sign_up_register"
        android:layout_width="121dp"
        android:layout_height="30dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/sign_up_register"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:hint="@string/sign_up"
        android:padding="2dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_avatar_no_gender" />

    <TextView
        android:id="@+id/text_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:alpha="0.58"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_app_logo_register" />

    <!--<ImageView
        android:id="@+id/image_top_left_sketch"
        android:layout_width="394dp"
        android:layout_height="167dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:src="@drawable/top_left_sketch"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="15dp" />-->

    <EditText
        android:id="@+id/editText_mail_register"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@drawable/mail_button"
        android:ems="10"
        android:fontFamily="@font/roboto_bold"
        android:gravity="start"
        android:hint="@string/mail_register"
        android:inputType="textEmailAddress"
        android:paddingVertical="9dp"
        android:paddingStart="35dp"
        android:paddingLeft="35dp"
        android:paddingEnd="5dp"
        android:paddingRight="5dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_full_name" />

    <EditText
        android:id="@+id/editText_full_name"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_gravity="start"
        android:layout_marginTop="20dp"
        android:background="@drawable/full_name_button"
        android:ems="10"
        android:fontFamily="@font/roboto_bold"
        android:foregroundGravity="center"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:paddingStart="35dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_app_name" />

    <EditText
        android:id="@+id/editText_password_again_register"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_gravity="start"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@drawable/password_button"
        android:ems="10"
        android:fontFamily="@font/roboto_bold"
        android:hint="@string/password_again"
        android:inputType="textPassword"
        android:paddingVertical="9dp"
        android:paddingStart="35dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textAlignment="viewStart"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_password_register" />

    <EditText
        android:id="@+id/editText_password_register"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_gravity="start"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@drawable/password_button"
        android:ems="10"
        android:fontFamily="@font/roboto_bold"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingVertical="9dp"
        android:paddingStart="35dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textAlignment="viewStart"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_mail_register" />

    <!--<ImageView
        android:id="@+id/image_top_right_sketch"
        android:layout_width="145dp"
        android:layout_height="316dp"
        android:layout_marginStart="240dp"
        android:layout_marginLeft="240dp"
        android:layout_marginBottom="440dp"
        android:src="@drawable/top_right_sketch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />-->

</androidx.constraintlayout.widget.ConstraintLayout>